cookbook/config/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
# Modify your project name and namespace
# selfLink must be modify
metadata:
  name: iamp
  namespace: iamp
  selfLink: /apis/extensions/v1beta1/namespaces/iamp/ingresses/iamp
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
# Modify your service name and service port
spec:
  rules:
    - host: tiamp.cminl.oa
      http:
        paths:
          - path: /iampweb(/|$)(.*)
            backend:
              serviceName: iampweb-service
              servicePort: 8081
          - path: /collector(/|$)(.*)
            backend:
              serviceName: datacollectorapi-service
              servicePort: 5000
          - path: /provider(/|$)(.*)
            backend:
              serviceName: dataproviderapi-service
              servicePort: 5001
